--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,47 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class= "row justify-content-center" style= "margin-bottom: 50px;">
+    <p class= "circle">ABOUT</p>
+</div>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="d-flex flex-column mb-5">
+        <div class="p-2 bd-highlight">
+            <p>
+               <strong class= "about-number">01</strong>
+        	　　 会員登録がお済みでない方は<strong>「SIGN UP」</strong>ボタンよりご登録ください。<br>
+    	  　 　　　（登録済みの方は「LOGIN」ボタンよりご入室ください。）
+            </p>
+        </div>
+
+        <div class="p-2 bd-highlight">
+            <p>
+               <strong class= "about-number">02</strong>
+               <strong>	　　「TOP」</strong>ページには、フォロー中ユーザーの投稿が表示されます。
+            </p>
+        </div>
+
+        <div class="p-2 bd-highlight">
+            <p>
+                <strong class= "about-number">03</strong>
+        	    <strong>	　　「投稿」</strong>ボタンより、投稿の新規作成が行えます。
+            </p>
+        </div>
+
+        <div class="p-2 bd-highlight">
+            <p>
+                <strong class= "about-number">04</strong>
+                <strong>	　　「TIME LINE」</strong>ボタンより、最新の投稿を閲覧できます。
+            </p>
+        </div>
+
+        <div class="p-2 bd-highlight">
+            <p>
+                <strong class= "about-number">05</strong>
+                <strong>	　　「MY PAGE」</strong>ボタンより、自分の投稿の閲覧・会員情報の登録と編集が行えます。
+            </p>
+        </div>
+    </div>
+  </div>
+</div>
+
+
