--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,50 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require_self
+ *= require_tree
  */
 
  /*SCSSにBootstrapを読み込ませる*/
 @import "bootstrap";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: black;
+}
+
+.header-logo {
+    border-bottom: dotted 3px black;
+    border-color: green;
+	color: black;
+}
+
+header {
+	margin: 60px 0px;
+}
+
+.nav-item {
+	margin-left: 30px;
+}
+
+.circle {
+	display: inline-block;
+	width: 30%;
+	height: 150px;
+	border-radius: 80%;
+	border: 1px solid black;
+	border-color: green;
+	text-align:center;
+	line-height: 150px;
+	font-size: 35px;
+}
+
+footer {
+	width: 100%;
+	height: 120px;
+	background-color: #007700;
+	text-align: center;
+	margin-top: 50px;
+}
