--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MYRoom</title>
+    <title>MY ROOM</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,38 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class= "navbar navbar-expand-lg">
+        <div class= "container">
+          <nav class= "nav navbar-nav navbar-left">
+            <h3><strong><%= link_to " MY ROOM ", root_path, class: "header-logo" %></strong></h3>
+          </nav>
+
+          <nav>
+            <ul class= "nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+              <li class= "nav-item"><%= link_to " TOP ", "/users/:user_id/follows", class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " 投稿 ", new_post_path, class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to "TIME LINE ", posts_path, class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " MY PAGE ", user_path(current_user), class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " LOG OUT ", destroy_user_session_path, method: :delete, class: "btn btn-outline-dark" %></li>
+              <% else %>
+                <li class= "nav-item"><%= link_to " HOME ", root_path, class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " ABOUT ", homes_about_path, class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " SIGN UP ", new_user_registration_path, class: "btn btn-outline-dark" %></li>
+                <li class= "nav-item"><%= link_to " LOGIN ", new_user_session_path, class: "btn btn-outline-dark" %></li>
+              <% end %>
+            </ul>
+          </nav>
+        </div>
+      </nav>
+    </header>
+    <br>
+  <%= yield %>
+
+  <footer>
+    <p class= "text-center" style= "padding-top: 45px;">©︎ all rights reserved by MYROOM.Inc.</p>
+  </footer>
+
   </body>
 </html>
