--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<div class= "container" style= "margin-bottom: 50px;">
+  <div class= "row justify-content-center">
+    <h2><strong>編集画面</strong></h2>
+  </div>
+</div>
+
+<%= form_for(@post) do |f| %>
+    <div class= "container-fluid">
+        <div class= "row">
+        	<div class= "col-lg-2"></div>
+
+        	<div class= "col-lg-3">
+                <%= attachment_image_tag @post, :post_image, :fill, 250, 250, format: "jpg", fallback: "no-post_image.jpg" %>
+                <%= f.attachment_field :post_image %>
+            </div>
+
+            <div class= "col-lg-5 col-lg-offset-2">
+        	    <%= f.label :タイトル %>
+        	    <%= f.text_field :title, class: "form-control" %>
+
+        	    <%= f.label :投稿内容 %>
+        	    <%= f.text_area :body, class: "form-control" %>
+            </div>
+        </div>
+
+        <div class= "row justify-content-center" style="margin-top: 50px;">
+        	<%= link_to "戻る", post_path(@post), class: "btn btn-dark" %>
+        	<%= f.submit "更新する", class: "btn btn-dark" %>
+        </div>
+    </div>
+<% end %>
+
