--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div class= "container">
+    <div class= "row justify-content-center" style= "margin-bottom: 50px;">
+       <h2><strong>TIME LINE</strong></h2>
+    </div>
+
+	<div class= "row justify-content-center">
+		<div class= "col-lg-1"></div>
+		<div class= "col-lg-8 col-lg-offset-3">
+            <% @posts.each do |post| %>
+                <%= link_to post_path(post) do %>
+                    <%= attachment_image_tag post, :post_image, :fill, 130, 130, format: "jpg" %>
+                <% end %>
+            <% end %>
+        </div>
+    </div>
+
+    <div class= "row justify-content-center" style= "margin: 50px 0px;">
+        <%= paginate @posts %>
+    </div>
+</div>
