--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,7 +30,7 @@
 }
 
 .top-image {
-    background-image: image-url(top.image.jpg);
+    background-image: image-url("top.image.jpg");
 	background-size: cover;
     width: 100%;
 	height: 500px;
