--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 	<div class= "row">
 		<div class= "col-lg-12">
-            <%= attachment_image_tag @user, :profile_image, :fill, 45, 45, format: "jpg", fallback:"no-post_image.jpg", class: "rounded-circle" %>
+            <%= attachment_image_tag @user, :profile_image, :fill, 45, 45, format: "jpg", fallback:"no-post_image.jpg", size: "45x45", class: "rounded-circle" %>
              <%= @user.name %>
         </div>
     </div>
