[Fix]posts/show

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
         <div class= "col-lg-2"></div>
         <div class= "col-lg-8 col-lg-offset-2">
             <%= link_to user_path(@post.user) do %>
-                <%= attachment_image_tag @post.user, :profile_image, :fill, 45, 45, format: "jpg", fallback: "no-post_image.jpg", class: "rounded-circle" %>
+                <%= attachment_image_tag @post.user, :profile_image, :fill, 45, 45, format: "jpg", fallback: "no-post_image.jpg", size: "45x45", class: "rounded-circle" %>
             <% end %>
             <%= @post.user.name %>
         </div>
