--- a/app/views/favorites/likes.html.erb
+++ b/app/views/favorites/likes.html.erb
@@ -1,2 +1,30 @@
-<h1>Favorites#likes</h1>
-<p>Find me in app/views/favorites/likes.html.erb</p>
+<div class= "container">
+
+    <div class= "row justify-content-center" style= "margin-bottom: 50px;">
+       <h3><strong>いいねしてくれたアカウント</strong></h3>
+    </div>
+
+    <div class="row justify-content-center">
+        <% @post.favorite_users.each  do |user| %>
+            <div class= "col-lg-3"></div>
+
+            <div class="col-lg-1">
+                <%= link_to user_path(user) do %>
+                	<%= attachment_image_tag user, :profile_image, :fill, 55, 55, format: "jpg", class: "rounded-circle" %>
+                <% end %>
+            </div>
+
+            <div class="col-lg-3 text-left" style= "margin-top: 15px; font-size: 15px;">
+                <%= link_to user_path(user) do %>
+                    <%= user.name %>
+                <% end %>
+            </div>
+
+            <div class="col-lg-2 text-right" style= "margin-top: 12px;">
+                <%= link_to "＋フォローする", user_relationships_path(:user_id), class: "btn btn-outline-secondary btn-sm" %>
+            </div>
+
+            <div class= "col-lg-3"></div>
+        <% end %>
+    </div>
+</div>
