--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 
 .header-logo {
     border-bottom: dotted 3px black;
-    border-color: green;
+    border-color: #996633;
 	color: black;
 }
 
@@ -43,8 +43,8 @@ header {
 	width: 30%;
 	height: 150px;
 	border-radius: 80%;
-	border: 1px solid black;
-	border-color: green;
+	border: 1px solid #996633;
+	border-color: #996633;
 	text-align:center;
 	line-height: 150px;
 	font-size: 35px;
@@ -53,7 +53,7 @@ header {
 footer {
 	width: 100%;
 	height: 120px;
-	background-color: #007700;
+	background-color: #996633;
 	text-align: center;
 	margin-top: 50px;
 }
