--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -30,12 +30,12 @@
 }
 
 .top-image {
-    background-image: image-url("top.image.jpg");
+    background-image: image-url("home.image.jpg");
 	background-size: cover;
+    background-position: bottom;
     width: 100%;
 	height: 500px;
 	display: table;
-	background-size: cover;
 }
 
 .cover-text {
