--- a/app/views/relationships/follower.html.erb
+++ b/app/views/relationships/follower.html.erb
@@ -1,2 +1,8 @@
-<h1>Relationships#followers</h1>
-<p>Find me in app/views/relationships/followers.html.erb</p>
+
+<h3>フォロー中のアカウント</h3>
+<% if @users.count > 0 %>
+  <%= render '/users/follow', users: @users %>
+<% else %>
+  <p>フォロー中のユーザーはいません</p>
+<% end %>
+
