--- a/app/views/favorites/likes.html.erb
+++ b/app/views/favorites/likes.html.erb
@@ -21,7 +21,13 @@
             </div>
 
             <div class="col-lg-2 text-right" style= "margin-top: 12px;">
-                <%= link_to "＋フォローする", user_relationships_path(:user_id), class: "btn btn-outline-secondary btn-sm" %>
+                <% if user != current_user %>
+                    <% if current_user.following?(user) %>
+                        <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-dark btn-sm" %>
+                    <% else %>
+                        <%= link_to "＋フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-outline-secondary btn-sm" %>
+                    <% end %>
+                <% end %>
             </div>
 
             <div class= "col-lg-3"></div>
