--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,9 @@
         <div class= "col-lg-3 text-right">
             <% if @user != current_user %>
                 <% if current_user.following?(@user) %>
-                    <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete, class: "btn btn-dark btn-sm" %>
+                    <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-dark btn-sm" %>
                 <% else %>
-                    <%= link_to 'フォローする', user_relationships_path(@user.id), method: :post, class: "btn btn-outline-secondary btn-sm" %>
+                    <%= link_to "＋フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-outline-secondary btn-sm" %>
                 <% end %>
             <% end %>
         </div>
@@ -53,7 +53,7 @@
                     <!-- お気に入り数表示 -->
                     <td><%= link_to @user.favorites.count, post_liked_path(@user) %></td>
                     <!-- いいね数表示 -->
-                    <td><%= link_to @favorites, post_likes_path(@user.id) %></td>
+                    <td><%= link_to @favorites, post_likes_path(@user) %></td>
                     <!-- フォロー数表示 -->
    　　            　<td><%= link_to @user.follower.count, user_follows_path(@user) %></td>
                     <!-- フォロワー数表示 -->
