--- a/app/views/favorites/userliked.html.erb
+++ b/app/views/favorites/userliked.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row justify-content-center">
-        <% @post.favorite_users.each do |user| %>
+        <% @userList.each do |user| %>
             <div class= "col-lg-3"></div>
 
             <div class="col-lg-1">
@@ -16,7 +16,7 @@
 
             <div class="col-lg-3 text-left" style= "margin-top: 15px; font-size: 15px;">
                 <%= link_to user_path(user) do %>
-                    <%= user.name %>
+                    <%= @user.name %>
                 <% end %>
             </div>
 
