--- a/app/views/favorites/userliked.html.erb
+++ b/app/views/favorites/userliked.html.erb
@@ -4,8 +4,9 @@
        <h3><strong>いいねしてくれたアカウント</strong></h3>
     </div>
 
-    <div class="row justify-content-center">
-        <% @userList.each do |user| %>
+
+    <% @userList.each do |user| %>
+        <div class="row justify-content-center p-3">
             <div class= "col-lg-3"></div>
 
             <div class="col-lg-1">
@@ -16,7 +17,7 @@
 
             <div class="col-lg-3 text-left" style= "margin-top: 15px; font-size: 15px;">
                 <%= link_to user_path(user) do %>
-                    <%= @user.name %>
+                    <%= user.name %>
                 <% end %>
             </div>
 
@@ -31,6 +32,6 @@
             </div>
 
             <div class= "col-lg-3"></div>
-        <% end %>
-    </div>
+        </div>
+    <% end %>
 </div>
