[Add/Fix] Variable name(favorites_controller)/gem rubocop/posts_controller

--- a/app/views/favorites/userliked.html.erb
+++ b/app/views/favorites/userliked.html.erb
@@ -5,7 +5,7 @@
     </div>
 
 
-    <% @userList.each do |user| %>
+    <% @user_list.each do |user| %>
         <div class="row justify-content-center p-3">
             <div class= "col-lg-3"></div>
 
