--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -16,8 +16,7 @@
 
     <div class= "top-image">
     	<div class= "cover-text">
-    		<p class= "text-center" style= "font-size: 14px;">
-    			<strong>
+    		<p class= "top-text">
     			ようこそ、MY ROOMへ！<br>
     			このサイトは、実際に住んでいる一人暮らしのお部屋の<br>
     			インテリア写真投稿SNSサイトです。<br>
@@ -29,7 +28,6 @@
     			<br>
     			会員登録がお済みでない方は「新規登録ボタン」から<br>
     			登録済みの方は「ログインボタン」よりご入室ください。<br>
-    		    </strong>
     		</p>
     	</div>
     </div>
