--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -44,6 +44,11 @@
 	text-align: center;
 }
 
+.top-text {
+    background-color:rgba(255,255,255,0.6);
+	color: black;
+}
+
 .about-number {
 	border-bottom: solid 2px black;
     font-size: 30px;
